# metaculus-rs

./: .envrc  .gitignore  .openapi-generator-ignore  Cargo.toml  LICENSE  Metaculus API (1.0) Modified.yaml  Metaculus API (1.0).yaml  README.md  flake.nix  generate_client.sh  git_push.sh  openapi-generator-cli.yaml  process_spec.rb
.openapi-generator/: FILES
docs/: AboutNumbers.md  AboutNumbersApi.md  Boost.md  BulkPredictionInput.md  CategoriesApi.md  Category.md  Comment.md  CommentChildren.md  CommentUpdate.md  CommentsApi.md  Considerations.md  ExtendedPredictionUsername.md  GlobalCpReminder.md  Notification.md  NotificationTypeEnum.md  NotificationsApi.md  Option.md  Organization.md  OrganizationDetail.md  OrganizationsApi.md  PaginatedCategoryList.md  PaginatedCommentList.md  PaginatedNotificationList.md  PaginatedPredictionUsernameList.md  PaginatedProjectUserStatsList.md  PaginatedQuestionList.md  PaginatedQuestionUserList.md  PaginatedRankingList.md  PaginatedReminderList.md  PaginatedUserProfileList.md  PatchedCommentUpdate.md  PatchedOrganization.md  PatchedProject.md  PatchedQuestionUpdate.md  PatchedReminder.md  PatchedUser.md  PatchedUserProfile.md  Prediction.md  PredictionForDate.md  PredictionHistory.md  (+50 more)
src/apis/: about_numbers_api.rs  categories_api.rs  comments_api.rs  configuration.rs  mod.rs  notifications_api.rs  organizations_api.rs  predictions_api.rs  projects_api.rs  projectstats_api.rs  question_summaries_api.rs  questions_api.rs  rankings_api.rs  reminders_api.rs  stats_api.rs  user_profiles_api.rs  users_api.rs
src/models/: boost.rs  (+79 more)
(+7 files in other folders)
