[package]
name = "metaculus"
version = "0.0.2"
authors = ["Benjamin Manns <opensource@benmanns.com>"]
description = "API Client for Metaculus"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/benmanns/metaculus-rs"

[dependencies]
reqwest = { version = "^0.11", features = ["json", "multipart"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_with = ">=2.0, <4"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
